# invoice-extractor

./: .gitignore  README.md  app.py  main.py  pyproject.toml
app/: app.py
app/client/: open_ai_client.py  open_ai_conf.py
app/models/: invoice_model.py
app/service/: open_ai_service.py
client/: base_api_client.py  open_ai_client.py  open_ai_conf.py
models/: __init__.py  invoice_model.py
service/: open_ai_service.py
