[tool.poetry]
name = "invoice-extractor"
version = "0.1.0"
description = ""
authors = ["Merenda Franco N. <merenda.franco83@gmail.com>"]
readme = "README.md"
packages = [{include = "invoice_extractor"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
openai = "^1.57.0"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
